<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.fivethings.paper"
    tools:showIn="@layout/activity_paper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:background="#BBDEFB"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="Brief introduction to paper." />

        <ImageView
            android:src="@drawable/paper"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="75dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction_to_paper"
                android:textSize="20sp"
                android:textColor="#212121"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Origin of paper: "
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin_of_paper"
                android:textColor="#212121"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Classification of paper: "
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classification_of_paper"
                android:textColor="#212121"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Features of paper: "
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features_of_paper"
                android:textColor="#212121"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Material and production of paper: "
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_and_production_of_paper"
                android:textColor="#212121"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
