<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.fivethings.InkStone"
    tools:showIn="@layout/activity_ink_stone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:background="#BBDEFB"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="Brief introduction to ink stone." />

        <ImageView
            android:src="@drawable/inkstone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="75dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction_to_ink_stone"
                android:textSize="20sp"
                android:textColor="#212121"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Usage of ink stone: "
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usage_of_ink_stone"
                android:textSize="20sp"
                android:textColor="#212121"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Four famous ink stones: "
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_famous_ink_stone"
                android:textSize="20sp"
                android:textColor="#212121"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

